--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ click==8.0.1
 typing-extensions==3.7.4.3
 structlog==20.2.0
 colorama==0.4.4
-gymnasium==1.0.0
-scikit-learn==1.5.2
+gymnasium>=1.0.0
+scikit-learn>=1.5.2
